최댓값, 최솟값 오류

--- a/C_CodingTest/C_CodingTest.vcxproj
+++ b/C_CodingTest/C_CodingTest.vcxproj
@@ -142,9 +142,11 @@
     <ClCompile Include="07-2-1.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="07-2-2.c" />
-    <ClCompile Include="11-1-1.c">
+    <ClCompile Include="07-2-2.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="11-1-1.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
