--- a/C_CodingTest/C_CodingTest.vcxproj.filters
+++ b/C_CodingTest/C_CodingTest.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="07-2-2.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="09-1-1.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
