그 전 파일 빌드에서 제외

--- a/C_CodingTest/C_CodingTest.vcxproj.filters
+++ b/C_CodingTest/C_CodingTest.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="09-1-1.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="09-1-2.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
