--- a/C_CodingTest/C_CodingTest.vcxproj
+++ b/C_CodingTest/C_CodingTest.vcxproj
@@ -145,7 +145,10 @@
     <ClCompile Include="07-2-2.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="09-1-1.c" />
+    <ClCompile Include="09-1-1.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="09-1-2.c" />
     <ClCompile Include="11-1-1.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
