--- a/C_CodingTest/C_CodingTest.vcxproj.filters
+++ b/C_CodingTest/C_CodingTest.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="09-1-2.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="09-1-3.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
